fix : dark theme and contrast theme

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -36,7 +36,6 @@
 }
 
 .high-contrast button,
-
 .high-contrast select,
 .high-contrast textarea {
   background-color: white !important;
@@ -51,10 +50,6 @@
 
 .high-contrast .leaflet-container {
   filter: none !important;
-}
-
-body.high-contrast {
-  filter: grayscale(100%) contrast(100%);
 }
 
 .high-contrast .leaflet-popup-content-wrapper {
@@ -72,6 +67,13 @@ body.high-contrast {
   background-color: white !important;
   color: black !important;
   border: 1px solid black !important;
+}
+
+.high-contrast .map-container {
+  &::after {
+    content: "contrast";
+    display: none;
+  }
 }
 
 /* Protanopia (Red-green color blindness) */
